Fix overflow for presence

--- a/presence/src/presence.css
+++ b/presence/src/presence.css
@@ -1,15 +1,17 @@
 #presence {
   position: fixed;
   bottom: 14px;
-  right: 10px;
+  right: 25px;
+  left: 10px;
 }
 
 #presence > ul {
   list-style: none;
   padding: 0;
-  margin: 0 15px 0 0;
+  margin: 0;
   display: flex;
-  flex-wrap: wrap;
+  flex-wrap: wrap-reverse;
+  flex-direction: row-reverse;
 }
 
 #presence > ul > li {
